--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697892622-data-analyst'>Allegro Data Analyst | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oe8pbfwG&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nam0qMwd'>Benefitfocus Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/fr/o/data-analystdata-engineer-internship'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/fr/o/data-analystdata-engineer-internship'>
       Data Analyst/Data Engineer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -131,7 +135,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
+<h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -143,7 +147,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/apellis/job/osRrbfwF'> Apellis Pharmaceuticals Careers - Director, Biostatistics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/apellis/job/osRrbfwF'> Apellis Pharmaceuticals Careers - Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -228,7 +232,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/carfax/job/ovcsbfw4'>CARFAX Careers - Data Quality Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/carfax/job/ovcsbfw4'>CARFAX Careers - Data Quality Analyst</a></h5> 
 <p><span class="badge badge-light">Centreville, Virginia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -274,7 +278,7 @@
 <p><span class="badge badge-light">Toronto, ON, Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4DaVfww&k=Job&j=oOeibfwf&__jvst=Employee+Referral&__jvsd=sbWmrhwG&__jvsc=Twitter&bid=nrZwpMwC'>Datastrong Careers - SOC Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4DaVfww&k=Job&j=oOeibfwf&__jvst=Employee+Referral&__jvsd=sbWmrhwG&__jvsc=Twitter&bid=nrZwpMwC'>Datastrong Careers - SOC Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -358,7 +362,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://onedot.join.com/jobs/470783-data-analyst-intern'>Job @ Onedot (Schlieren): Data Analyst Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/470783-data-analyst-intern'>Job @ Onedot (Schlieren): Data Analyst Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -422,7 +426,7 @@
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -478,16 +482,12 @@
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/medallia/7b36f37c-5f4d-4c39-a787-182ff4b1f5f9'>Medallia - Senior Data Analyst, People Analytics</a></h5> 
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
-<p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
